--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
     /* Colors */
     --white-color: #fff;
     --dark-color: #252525;
-    --primary-color: #3b141c;
-    --secondary-color:#f3961c;
+    --primary-color: #FEC8D6;
+    --secondary-color: #654321;
     --light-pink-color: #faf4f5;
     --medium-gray-color: #ccc;
 
@@ -56,19 +56,76 @@ img {
     width: 100%;
 }
 
+.section-content{
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: var(--site-max-widh);
+
+}
 a {
     text-decoration: none;
 }
+/* Navbar styling */
 
 header {
+    position: fixed;
+    width: 100%;
+    z-index: 5;
     background: var(--primary-color) ;
 }
 
+header .navbar {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .navbar .nav-logo .logo-text{
-    color: var(--white-color)
+    color: var(--white-color);
+    font-size: var(--font-size-xl);
+    font-weight: var(--font-weight-semibold);
+}
+
+.navbar .nav-menu {
+    display: flex;
+    gap: 10px;
 }
 .navbar .nav-menu .nav-link{
-    color: var (--white-color);
-
-
+    padding: 10px 18px;
+    color: var(--white-color);
+    font-size: var(--font-size-m);
+    background: var(--secondary-color);
+    border-radius: var(--border-radius-m);
+    transition: 0.3s ease;
 }
+.navbar .nav-menu .nav-link:hover {
+    color: var(--primary-color);
+    background: var(--secondary-color);
+}
+.hero-section {
+    min-height: 100vh;
+    background: var(--primary-color);
+}
+
+.hero-section .section-content{
+    display:flex;
+    align-items: center;
+    min-height: 100vh;
+    color:var(--white-color);
+    justify-content: space-between;
+}
+
+.hero-section .hero-details .title{
+    font-size: var(--font-size-xxl);
+}
+
+.hero-image-wrapper {
+    max-width: 400px; /* or whatever you like */
+  }
+  
+  .hero-image {
+    width: 45%;
+    height: auto;
+    border-radius: var(--border-radius-s); /* optional for round corners */
+  }
