--- a/style.css
+++ b/style.css
@@ -95,16 +95,24 @@ header .navbar {
 }
 .navbar .nav-menu .nav-link{
     padding: 10px 18px;
-    color: var(--white-color);
+    color: var(--primary-color);
+    border: 2px solid transparent;
     font-size: var(--font-size-m);
     background: var(--secondary-color);
     border-radius: var(--border-radius-m);
     transition: 0.3s ease;
 }
 .navbar .nav-menu .nav-link:hover {
-    color: var(--primary-color);
-    background: var(--secondary-color);
+    color: var(--secondary-color);
+    background: var(--primary-color);
+    border-color:var(--secondary-color);
 }
+
+.navbar :where(#menu-close-button, #menu-open-button) {
+    display: none;
+}
+
+/* Hero section */
 .hero-section {
     min-height: 100vh;
     background: var(--primary-color);
@@ -140,19 +148,137 @@ header .navbar {
 
 }
 
+.hero-section .hero-details .buttons {
+    display: flex;
+    gap: 23px;
+
+
+}
+
 .hero-section .hero-details .button {
     padding: 10px 26px;
+    border: 2px solid transparent;
     color: var(--primary-color);
     border-radius: var(var(--border-radius-m));
     background: var(--secondary-color);
     margin-right: 10px;
     font-weight: var(--font-weight-medium);
+    transition: 0.3s ease ;
+}
+
+.hero-section .hero-details .button:hover,
+.hero-section .hero-details .contact-us{
+    color: var(--secondary-color);
+    border-color: var(--secondary-color);
+    background: var(--primary-color);
+
+}
+
+.hero-section .hero-details .contact-us:hover
+{
+    color: var(--primary-color);
+    border-color: var(--secondary-color);
+    background: var(--secondary-color);
+
 }
 
 .hero-image-wrapper {
     max-width: 500px; /* or whatever you like */
     margin-right: 30px;
   }
-  * optional for round corners */
+  /* optional for round corners */
   
+
+  /* left side menu */
+  @media screen and (max-width: 900px) {
+    :root {
+        --font-size-m: 1rem;
+        --font-size-l: 1.3rem;
+        --font-size-xl: 1.5rem;
+        --font-size-xxl: 1.8rem;
+    }
+
+    body.show-mobile-menu header::before {
+        content: "";
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        backdrop-filter: blur(5px);
+        background: rgba(0,0,0,0.2);
+
+    }
+
+
+    .navbar :where(#menu-close-button, #menu-open-button) {
+        display: block;
+        font-size: var(--font-size-l);
+    }
+
+    .navbar #menu-close-button {
+        position: absolute;
+        right: 30px;
+        top: 30px;
+    }
+
+    .navbar #menu-open-button{
+        color: var(--white-color);
+
+    }
+
+    .navbar .nav-menu {
+        display: block;
+        position: fixed;
+        left: -300px;
+        top: 0;
+        width: 300px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 100px; 
+        background: #FFE5B4;
+        transition: left 0.2s ease;
+    }
+
+    body.show-mobile-menu .navbar .nav-menu {
+        left: 0px;
+
+    }
+    
+    .navbar .nav-menu .nav-link{
+        color: var(--dark-color);
+        display: block;
+        margin-top: 17px;
+        font-size: var(--font-size-l);
+    }
+
+    .hero-section .section-content{
+        gap: 50px;
+        text-align: center;
+        padding: 30px 20px 20px;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .hero-section .hero-details :is(.subtitle,
+    .description){
+        max-width: 100%;
+    }
+
+    .hero-section .hero-details .buttons {
+        justify-content: centercd";
+
+    }
+
+    
+
+    .hero-section .hero-image-wrapper{
+        max-width: 270px;
+        margin-right: 0;
+    }
+
+    
+  }
 
