--- a/style.css
+++ b/style.css
@@ -224,15 +224,47 @@ header .navbar {
     border-radius: var(--border-radius-circle);
   }
 
-  .about-section .about-details .sect
+  .about-section .about-details .section-title{
+    padding: 0;
+  }
+
+  .about-section .about-details {
+    max-width: 50%;}
   
+
+ 
   .about-section .about-details .text {
     line-height: 30px;
     margin: 50px 0 30px; 
     text-align: center;
     font-size: var(--font-size-m);
   }
+ 
+  .about-section .social-link-list {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+  }
 
+  .about-section .social-link-list .social-link {
+    color: var(--primary-color);
+    font-size: var( --font-size-l);
+    transition: 0.2s ease;
+  }
+
+  .about-section .social-link-list .social-link:nth-child(1):hover {
+    color: blue; /* Facebook */
+  }
+  
+  .about-section .social-link-list .social-link:nth-child(2):hover {
+    color: brown; /* Instagram */
+  }
+  
+  .about-section .social-link-list .social-link:nth-child(3):hover {
+    color: lightblue; /* Twitter */
+  }
+
+  
   /* left side menu */
   @media screen and (max-width: 900px) {
     :root {
@@ -307,7 +339,7 @@ header .navbar {
     }
 
     .hero-section .hero-details :is(.subtitle,
-    .description){
+    .description), .about-section .about-details{
         max-width: 100%;
     }
 
@@ -321,6 +353,20 @@ header .navbar {
     .hero-section .hero-image-wrapper{
         max-width: 270px;
         margin-right: 0;
+    }
+
+    .about-section .section-content {
+        gap: 70px;
+        flex-direction: column;
+    }
+
+    .about-section .about-image-wrapper . .about-image{
+        width: 100%;
+        height: 100%;
+        max-width: 250px;
+        aspect-ratio: 1;
+
+
     }
 
     
