--- a/style.css
+++ b/style.css
@@ -264,15 +264,74 @@ header .navbar {
     color: lightblue; /* Twitter */
   }
 
+  /* Product Section Styling */
+
+  .menu-section{
+    color: var(--white-color);
+    background:var(--dark-color)
+  }
+
+
+  .menu-section .menu-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 110px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   
-  /* left side menu */
-  @media screen and (max-width: 900px) {
+
+  .menu-section .menu-list .menu-item {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(100% / 3 - 110px );
+  }
+
+  .menu-section .menu-list .menu-item .menu-image{
+    max-width: 83%;
+    aspect-ratio: 1;
+    margin-bottom: 15px;
+    object-fit: contain;
+  }
+
+  .menu-section .menu-list .menu-item .name {
+    margin: 12px 0;
+    font-size: var(--font-size-l);
+    font-weight: var(--font-weight-semibold);
+  }
+
+  .menu-section .menu-list .menu-item .text{
+    font-size: var(--font-size-m);
+  }
+  
+/* Responsive media query code for max width 1024px */
+  @media screen and (max-width: 1024px) {
+    .menu-section .menu-list{
+        gap: 60px;
+    }
+    .menu-section .menu-list .menu-item{
+        width: calc(100% / 3 - 60px );
+
+    }
+
+
+  }
+
+  
+   /* left side menu */
+   @media screen and (max-width: 900px) {
     :root {
         --font-size-m: 1rem;
         --font-size-l: 1.3rem;
         --font-size-xl: 1.5rem;
         --font-size-xxl: 1.8rem;
     }
+   
+
 
     body.show-mobile-menu header::before {
         content: "";
@@ -360,7 +419,7 @@ header .navbar {
         flex-direction: column;
     }
 
-    .about-section .about-image-wrapper . .about-image{
+    .about-section .about-image-wrapper .about-image{
         width: 100%;
         height: 100%;
         max-width: 250px;
@@ -370,5 +429,5 @@ header .navbar {
     }
 
     
-  }
+   }
 
