--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ header .navbar {
   }
 
   .about-section .about-details {
-    max-width: 50%;}
+    max-width: 100%;}
   
 
  
@@ -267,8 +267,9 @@ header .navbar {
   /* Product Section Styling */
 
   .menu-section{
-    color: var(--white-color);
-    background:var(--dark-color)
+    color: #AA336A;
+    background-image: url("images/background.jpeg");
+    padding: 50px 0 100px;
   }
 
 
@@ -307,7 +308,61 @@ header .navbar {
   .menu-section .menu-list .menu-item .text{
     font-size: var(--font-size-m);
   }
+
+  /* Testimonials section styling*/
+  .testimonials-section {
+    padding: 50px 0 100px;
+    background: var(--light-pink-color);
+  }
+
+  .testimonials-section .slider-wrapper {
+    overflow: hidden;
+    margin: 0.60px 50px;
+  }
+
+  .testimonials-section .testimonials {
+    display: flex;
+    padding: 35px;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+  }
   
+  .testimonials-section .testimonials .user-image {
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    margin-bottom: 50px;
+    border-radius: var(--border-radius-circle);
+  }
+
+  .testimonials-section .testimonials .name {
+    margin-bottom: 16px;
+    font-size: var(--font-size-m);
+  }
+
+  .testimonials-section .testimonials .feedback{
+    line-height: 25px;
+  }
+
+  .testimonials-section .swiper-pagination-bullet {
+    width: 15px;
+    height: 15px;
+    opacity: 1;
+    background: var(--secondary-color);
+  }
+
+  .testimonials-section .swiper-slide-button {
+    color: var(--secondary-color);
+    margin-top: -50px;
+    transition: 0.3s ease;
+  }
+
+  .testimonials-section .swiper-slide-button:hover {
+    color: var(--primary-color);
+
+  }
+
 /* Responsive media query code for max width 1024px */
   @media screen and (max-width: 1024px) {
     .menu-section .menu-list{
@@ -428,6 +483,16 @@ header .navbar {
 
     }
 
-    
+    .menu-section .menu-list{
+        gap: 30px;
+    }
+    .menu-section .menu-list .menu-item{
+        width: calc(100% / 2 - 30px );
+
+    }
+
+    .menu-section .menu-list .menu-item .menu-image{
+        max-width: 200px;
+    }
    }
 
