--- a/style.css
+++ b/style.css
@@ -630,7 +630,8 @@ header .navbar {
 
     .about-section .section-content {
         gap: 70px;
-        flex-direction: column-reverse;
+        flex-direction: column;
+
     }
 
     .about-section .about-image-wrapper .about-image{
